ingress/microrts-route-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: microrts-nginx-svc
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: microrts-svc.hipstershop.svc.cluster.local
