ingress/hipstershop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hipstershop-ingress
  namespace: hipstershop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /cartservice
            pathType: Prefix
            backend:
              service:
                name: cartservice-svc
                port:
                  number: 9233
          - path: /inventoryservice
            pathType: Prefix
            backend:
              service:
                name: inventoryservice-svc
                port:
                  number: 9236
          - path: /shippingservice
            pathType: Prefix
            backend:
              service:
                name: shippingservice-svc
                port:
                  number: 9237
          - path: /productservice
            pathType: Prefix
            backend:
              service:
                name: productservice-svc
                port:
                  number: 9232
          - path: /paymentservice
            pathType: Prefix
            backend:
              service:
                name: paymentservice-svc
                port:
                  number: 9235
          - path: /userservice
            pathType: Prefix
            backend:
              service:
                name: userservice-svc
                port:
                  number: 9231
          - path: /orderservice
            pathType: Prefix
            backend:
              service:
                name: orderservice-svc
                port:
                  number: 9234
