ingress/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: hipstershop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: cartservice-svc
                port:
                  number: 9233
